--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-.range-box span {
-    border: 1px solid #000;
-    padding: 10px;
-    display: inline-block;
+
+
+.range-box {
+    display: flex;
+    align-items: center;
 }
